--- a/main.html
+++ b/main.html
@@ -6,17 +6,9 @@
   </head>
   <body>
     <div id="app">
-      {{price}}円
+      {{message}}
     </div>
     <script src="https://jp.vuejs.org/js/vue.js"></script>
-    <script>
-    var app = new Vue({
-      el: '#app',
-      data:{
-        price: 0
-      }
-    });
-    app.price = 1000; //データを更新する
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
