--- a/main.html
+++ b/main.html
@@ -2,11 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>サンプル</title>
+    <title>商品一覧</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div id="app">
-      {{message}}
+      <div class="container">
+        <h1 class="pageTitle">商品一覧</h1>
+        <!-- 検索欄 -->
+        <div class="search">
+          <div class="result">
+            検索結果 <span class="count">６件</span>
+          </div>
+          <div class="condition">
+            <div class="target">
+              <lebel><input type="checkbox">セール対象</lebel>
+              <lebel><input type="checkbox">送料無料</lebel>
+            </div>
+            <div class="sort">
+              <lebel for="sort">並び替え</lebel>
+              <select id="sort" class="sorting">
+                <option value="1">標準</option>
+                <option value="2">価格が安い順</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <!--商品一覧-->
+        <div class="list">
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/01.jpg" alt="">
+              <figcaption>Michael<br>スマホケース</figcaption>
+            </figure>
+            
+          </dev>
+        </div>
+      </div>
     </div>
     <script src="https://jp.vuejs.org/js/vue.js"></script>
     <script src="main.js"></script>
