--- a/main.html
+++ b/main.html
@@ -37,12 +37,71 @@
               <img src="image/01.jpg" alt="">
               <figcaption>Michael<br>スマホケース</figcaption>
             </figure>
-            
+            <div class="detail">
+              <div class="price"><span>1,580</span>円（税込）</div>
+              <div class="shipping-fee none">送料無料</div>
+            </div>
           </dev>
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/02.jpg" alt="">
+              <figcaption>Raphael<br>スマホケース</figcaption>
+            </figure>
+            <div class="detail">
+              <div class="price"><span>1,580</span>円（税込）</div>
+              <div class="shipping-fee none">送料無料</div>
+            </div>
+          </dev>
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/03.jpg" alt="">
+              <figcaption>Gabriel<br>スマホケース</figcaption>
+            </figure>
+            <div class="detail">
+              <div class="price"><span>1,580</span>円（税込）</div>
+              <div class="shipping-fee none">送料240円</div>
+            </div>
+          </dev>
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/04.jpg" alt="">
+              <figcaption>Uriel<br>スマホケース</figcaption>
+            </figure>
+            <div class="detail">
+              <div class="price"><span>980</span>円（税込）</div>
+              <div class="shipping-fee none">送料無料</div>
+            </div>
+          </dev>
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/05.jpg" alt="">
+              <figcaption>Ariel<br>スマホケース</figcaption>
+            </figure>
+            <div class="detail">
+              <div class="price"><span>980</span>円（税込）</div>
+              <div class="shipping-fee none">送料無料</div>
+            </div>
+          </dev>
+          <dev class="item">
+            <figure class="image">
+              <div class="status">SALE</div>
+              <img src="image/06.jpg" alt="">
+              <figcaption>Azrael<br>スマホケース</figcaption>
+            </figure>
+            <div class="detail">
+              <div class="price"><span>1,580</span>円（税込）</div>
+              <div class="shipping-fee none">送料無料</div>
+            </div>
+          </dev>
+          </div>
         </div>
       </div>
     </div>
-    <script src="https://jp.vuejs.org/js/vue.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="https://jp.vuejs.org/js/vue.js"></script>
+    <script src="main.js"></script> -->
   </body>
 </html>
