--- a/main.html
+++ b/main.html
@@ -99,7 +99,7 @@
         </div>
       </div>
     </div>
-    <!-- <script src="https://jp.vuejs.org/js/vue.js"></script> -->
+    <script src="https://jp.vuejs.org/js/vue.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
