--- a/main.html
+++ b/main.html
@@ -17,12 +17,12 @@
           </div>
           <div class="condition">
             <div class="target">
-              <label><input type="checkbox">セール対象</label>
-              <label><input type="checkbox">送料無料</label>
+              <label><input type="checkbox" v-model="showSaleItem">セール対象{{showSaleItem}}</label>
+              <label><input type="checkbox" v-model="showDelvFree">送料無料{{showDelvFree}}</label>
             </div>
             <div class="sort">
-              <label for="sort">並び替え</label>
-              <select id="sort" class="sorting">
+              <label for="sort">並び替え{{sortOrder}}</label>
+              <select id="sort" class="sorting" v-model.number="sortOrder">
                 <option value="1">標準</option>
                 <option value="2">価格が安い順</option>
               </select>
@@ -39,10 +39,10 @@
             </template>
               <!--セール対象の場合↑-->
               <img v-bind:src="product.image" alt="">
-              <figcaption>{{product.name}}</figcaption>
+              <figcaption v-html="product.name"></figcaption>
             </figure>
             <div class="detail">
-              <div class="price"><span>{{product.price}}</span>円（税込）</div>
+              <div class="price"><span>{{product.price | number_format}}</span>円（税込）</div>
               <template v-if="product.delv == 0">
               <!--送料無料の場合-->
               <div class="shipping-fee none">送料無料</div>
@@ -50,7 +50,7 @@
             </template>
             <template v-else>
               <!--送料ありの場合-->
-              <div class="shipping-fee">+送料240円</div>
+              <div class="shipping-fee">+送料{{product.delv | number_format}}</div>
               <!--送料ありの場合-->
             </template>
             </div>
