--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
           </div>
           <div class="condition">
             <div class="target">
-              <label><input type="checkbox" v-model="showSaleItem">セール対象{{showSaleItem}}</label>
-              <label><input type="checkbox" v-model="showDelvFree">送料無料{{showDelvFree}}</label>
+              <label><input type="checkbox" v-model="showSaleItem">セール対象</label>
+              <label><input type="checkbox" v-model="showDelvFree">送料無料</label>
             </div>
             <div class="sort">
-              <label for="sort">並び替え{{sortOrder}}</label>
+              <label for="sort">並び替え</label>
               <select id="sort" class="sorting" v-model.number="sortOrder">
                 <option value="1">標準</option>
                 <option value="2">価格が安い順</option>
@@ -31,7 +31,7 @@
         </div>
         <!--商品一覧-->
         <div class="list">
-          <div class="item" v-for="product in products">
+          <div class="item" v-for="product in filteredList">
             <figure class="image">
               <!--セール対象の場合↓-->
             <template v-if="product.isSale">
