--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <!-- 検索欄 -->
         <div class="search">
           <div class="result">
-            検索結果 <span class="count">６件</span>
+            検索結果 <span class="count">{{filteredList.length}}件</span>
           </div>
           <div class="condition">
             <div class="target">
