--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
         </div>
         <!--商品一覧-->
         <div class="list">
-          <div class="item" v-for="product in filteredList">
+          <div class="item" v-for="product in filteredList" v-bind:key="product.id">
             <figure class="image">
               <!--セール対象の場合↓-->
             <template v-if="product.isSale">
