--- a/main3.html
+++ b/main3.html
@@ -7,6 +7,7 @@
   <body>
     <button id="load">読み込み</button>
     <div id="result"></div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="main3.js"></script>
   </body>
 </html>
