--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
           </div>
         </div>
         <!--商品一覧-->
+        <div v-if="isError" class="error">{{message}}</div>
         <div class="list">
           <div class="item" v-for="product in filteredList" v-bind:key="product.id">
             <figure class="image">
