--- a/mitumori.html
+++ b/mitumori.html
@@ -142,6 +142,7 @@
     </form>
   </div>
 </div>
-<script src="mitumori.js"></script>
+<script src="https://jp.vuejs.org/js/vue.js"></script>
+<script src="mitumori2.js"></script>
 </body>
 </html>
